--- a/chapter-history-of-this-book.tex
+++ b/chapter-history-of-this-book.tex
@@ -4,7 +4,7 @@
 \renewcommand{\epigraphwidth}{8.3cm}
 \epigraph{For one of the most stringent tests of any physical theory is the prediction of its own creation process.}{Sébastien Fauvel,\\\textit{Quantum Ethics}~\cite{Fauvel2013}}
 
-How would Quantum Field Theory look like if we stopped for a while developing it further as if it were the draft of a yet-to-be-discovered Theory of Everything, and just started to reformulate the Standard Model as a mathematically and conceptually coherent physical theory? And what would such a theory tell us about the world and about ourselves, which remains hidden in the ill-defined formulations we've grown up with through the last decades? As I started back in 2010 to reflect on these questions, I didn't have yet a clear vision of what this work would lead me to. I just had the feeling that these very basic questions hadn't been interesting anyone any more for a far too long time, and that we should actually have the means by now, with our understanding of Renormalization, of writing down a well-defined Quantum Field Theory, reasonably accounting for all known experimental data (excepted General Relativity phenomena), which means essentially that it has to be compatible with the Standard Model at known energy scales. I was quite confident that I could find a physically sound regularization of the Standard Model, which I simply wouldn't consider as an approximation, but take as the exact theory itself, the Standard Model being an ill-defined idealization of it. The models used in computer simulations of lattice Quantum Chromodynamics, for instance, would show me the way. Of course, I knew that I wouldn't be able to derive the theory from the usual first principles any more, but given that all the attempts of axiomatic Quantum Field Theory to construct well-defined interacting fields upon these first principles had failed miserably, I thought that maybe they could be misleading in the end. Anyhow, I had never been very fond of the heuristical construction of Quantum Field Theory based on Gauge and Poincaré invariance. Developing the whole mathematical apparatus of Representation Theory to simply derive the expression of spin 1 and spin 1/2 spinors as irreducible unitary representations of the Poincaré group had always seemed far too expensive to me, and Gauge transformations mixing particle fields far too artificial to make up a fundamental symmetry of Nature.
+How would Quantum Field Theory look like if we stopped for a while developing it further as if it were the draft of a yet-to-be-discovered Theory of Everything, and just started to reformulate the Standard Model as a mathematically and conceptually coherent physical theory? And what would such a theory tell us about the world and about ourselves, which remains hidden in the ill-defined formulations we've grown up with through the last decades? As I started back in 2010 to reflect on these questions, I didn't have yet a clear vision of what this work would lead me to. I just had the feeling that these very basic questions hadn't been interesting anyone any more for a far too long time, and that we should actually have the means by now, with our understanding of Renormalization, of writing down a well-defined Quantum Field Theory, reasonably accounting for all known experimental data (excepted General Relativity phenomena) -- which means essentially that it has to be compatible with the Standard Model at known energy scales. I was quite confident that I could find a physically sound regularization of the Standard Model, which I simply wouldn't consider as an approximation, but take as the exact theory itself, the Standard Model being an ill-defined idealization of it. The models used in computer simulations of lattice Quantum Chromodynamics, for instance, would show me the way. Of course, I knew that I wouldn't be able to derive the theory from the usual first principles any more, but given that all the attempts of axiomatic Quantum Field Theory to construct well-defined interacting fields upon these first principles had failed miserably, I thought that maybe they could be misleading in the end. Anyhow, I had never been very fond of the heuristical construction of Quantum Field Theory based on Gauge and Poincaré invariance. Developing the whole mathematical apparatus of Representation Theory to simply derive the expression of spin 1 and spin 1/2 spinors as irreducible unitary representations of the Poincaré group had always seemed far too expensive to me, and Gauge transformations mixing particle fields far too artificial to make up a fundamental symmetry of Nature.
 
 So I felt free to redefine the Hilbert space of the quantum states without paying much attention to these first principles and focused instead on the mathematical well-definedness of the theory, and in particular of the Schrödinger equation. The most evident way of insuring a well-defined solution at all times is to make the Hilbert space finite dimensional, which has two major physical implications. The most important one is that the physical space itself, too, has to be finite, i.e. to consist in a finite number of points. The simplest way to take this constraint into account is to define space as a finite lattice, like in computer simulations of Quantum Chromodynamics, and to adapt the expression of the Hamiltonian operator of the Standard Model, developed on the momentum basis, by simply using a discrete Fourier transform on the lattice. This formulation of the theory, considered as a fundamental theory and not as a numerical approximation, has evident ontological and cosmological implications. It is interesting to see, for instance, how modern physics addresses thus the atomist polemic of ancient Greece, i.e. the question if matter can be, in principle, indefinitely separated into smaller pieces, or if there are smallest building blocks of matter. The answer of this theory were not only that elementary particles are the smallest, point-like building blocks of matter, but that space itself is constituted of smallest, point-like building blocks, and even of a finite number of them! Incidentally, the void between point-like particles imagined by Greek atomists like Democritus acquires a very different quality, too. There is still a notion of void as the unrealized potentiality of the presence of matter, represented by an unoccupied lattice site, but this site, although it is empty of matter, is still something familiar, identifiable, something we could put a name on. Psychologically, the void loses thus much of the threatening quality of the indiscernible. The empty space that we might tend to imagine between the lattice sites isn't actually part of the material world, it is purely virtual and has no physical relevance.
 
