--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -76,12 +76,12 @@ This sequence is, per definition, infinitely improbable if and only if, for any 
 \begin{equation*}
 \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) \xrightarrow{t \to \infty} 0
 \end{equation*}
-The analysis of the asymptotical behavior can be simplified by using, for $t \geq t_f$, following factorization:
+The analysis of the asymptotic behavior can be simplified by using, for $t \geq t_f$, following factorization:
 \begin{multline*}
 \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = \mathrm P_{t_f}(\cms_0, \dotsc, \cms_{t_f}; \ket{\Psi_i}) \\
 \mathrm P_{t - t_f}(\cms_{t_f}, \dotsc, \cms_t; \op \Pi_{\cms_{t_f}} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i})
 \end{multline*}
-The asymptotical behavior is governed by the second factor, which we will analyze under the generic form:
+The asymptotic behavior is governed by the second factor, which we will analyze under the generic form:
 \begin{equation*}
 \mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi}) = \bra{\Psi} (\op \Pi_{\cms} \dop U_\tau)^t \op \Pi_{\cms} (\op U_\tau \op \Pi_{\cms})^t \ket{\Psi} / \braket{\Psi}{\Psi}
 \end{equation*}
@@ -96,18 +96,31 @@ where $\H_\cms^\infty$ is a subspace of $\H_\cms$ that we will define subsequent
 \end{multline*}
 and proving that $\op \Pi_{\H_\cms^\infty} \op U_\tau \op \Pi_{\cms'} = 0$ for any $\cms' \neq \cms$ will yield the conclusion.
 
-Let us first analyze the structure of a mental subspace $\H_\cms$. Let $\H_\cms^{n+}$ be the subspace of the quantum states in $\H_\cms$ remaining in $\H_\cms$ after $1, \dotsc, n$ applications of the elementary evolution operator $\op U_\tau$. This operator being unitary, it is inversible, so that we can define these subspaces by:
+Let us first analyze the structure of a mental subspace $\H_\cms$. Let $\H_\cms^n$ be the subspace of the quantum states in $\H_\cms$ remaining in $\H_\cms$ after $1, \dotsc, n$ applications of the elementary evolution operator $\op U_\tau$. This operator being unitary, it is invertible, so that we can define these subspaces by:
 \begin{equation*}
-\H_\cms^{n+} \eqdef \bigcap_{t = 0}^n \op U_\tau^{-t} \H_\cms
+\H_\cms^n \eqdef \bigcap_{t = 0}^n \op U_\tau^{-t} \H_\cms
 \end{equation*}
 where $n \in \IN$. These subspaces are included in each other by construction, and we write $\H_\cms^\infty$ their intersection, given by:
 \begin{equation*}
 \H_\cms^\infty \eqdef \bigcap_{t = 0}^\infty \op U_\tau^{-t} \H_\cms
 \end{equation*}
-Let $\H_\cms^n$ be the supplementary subspace of $\H_\cms^{(n + 1)+}$ in $\H_\cms^{n+}$, defined by:
+
+$\H_\cms$ being finite dimensional, there must exist a finite number of distinct nested subspaces $\H_\cms^n$. Indeed, $\op U_\tau^{-1}$ being injective, we have
 \begin{equation*}
-\H_\cms^{n+} = \H_\cms^{(n + 1)+} \bigoplus^\perp \H_\cms^n
+\H_\cms^{n+1} = \H_\cms \cap \op U_\tau^{-1} \H_\cms^n
 \end{equation*}
+for any $n \in \IN$; if there exists a $n \in \IN$ such that $\H_\cms^n = \H_\cms^{n+1}$, we have therefore by recurrence $\H_\cms^n = \H_\cms^{n'} = \H_\cms^\infty$ for any $n' \geq n$. If there didn't exist such a $n \in \IN$, the inclusions $\H_\cms^{n+1} \subset \H_\cms^n$ would all be strict, so that the dimension of $\H_\cms^0 = \H_\cms$ would be infinite, which isn't the case. There must also exist a $n_\cms \in \IN$ such that
+\begin{equation*}
+n_\cms = \mathrm{min} \{ n \in \IN | \H_\cms^n = \H_\cms^{n+1} \}
+\end{equation*}
+and we have $\H_\cms^{n_\cms} = \H_\cms^\infty$.
+
+In the special case $n_\cms = 0$, it is trivial to show that $\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi})$ tends to $\bra{\Psi} \op \Pi_{\H_\cms^\infty} / \braket{\Psi}{\Psi}$ for any initial quantum state $\ket{\Psi} \in \H \setminus \{ 0 \}$. In this case, we have $\H_\cms^\infty = \H_\cms$ and we will see that  $\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi}) = \bra{\Psi} \op \Pi_{\H_\cms^\infty} \ket{\Psi} / \braket{\Psi}{\Psi}$ for any $t \in \IN$. The assertion holds for $t = 0$ per definition, and $\op \Pi_\cms \ket{\Psi} \in \H_\cms$ since $\op \Pi_\cms$ is a projection operator on $\H_\cms$. For any quantum state $\ket{\Psi_\cms} \in \H_\cms$, $\op U_\tau \ket{\Psi_\cms}$ has the same norm as $\ket{\Psi_\cms}$ because of the unitarity of $\op U_\tau$, and since $\H_\cms = \H_\cms^\infty \subset \op U_\tau^{-1} \H_\cms$, $\op U_\tau \ket{\Psi_\cms} \in \H_\cms$, so that $\op \Pi_\cms \op U_\tau \ket{\Psi_\cms}$ is equal to $\op U_\tau \ket{\Psi_\cms}$ and has the same norm as $\ket{\Psi_\cms}$, too. It is easy then to prove by recurrence that $(\op \Pi_\cms \op U_\tau)^t \ket{\Psi_\cms}$ is equal to $\op U_\tau^t \ket{\Psi_\cms}$ and has therefore the same norm as $\ket{\Psi_\cms}$ for any $t \in \IN$, so that we have:
+\begin{eqnarray*}
+\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi}) & = & \bra{\Psi} \op \Pi_\cms (\dop U_\tau \op \Pi_\cms)^t (\op \Pi_\cms \op U_\tau)^t \op \Pi_\cms \ket{\Psi} / \braket{\Psi}{\Psi} \\
+& = & \bra{\Psi} \op \Pi_\cms \ket{\Psi} / \braket{\Psi}{\Psi} = \bra{\Psi} \op \Pi_{\H_\cms^\infty} \ket{\Psi} / \braket{\Psi}{\Psi}
+\end{eqnarray*}
+for any quantum state $\ket{\Psi} \in \H \setminus \{ 0 \}$ and any $t \in \IN$.
 
 \paragraphtitle{Theorem} No quantum state is mortal.
 
