Second part of the proof of the lemma

--- a/chapter-hamiltonian-evolution.tex
+++ b/chapter-hamiltonian-evolution.tex
@@ -110,7 +110,7 @@ where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such as 
 \ket{\bFX {N_f} \pt \n \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\n^{\pt, \sp}_j} \sp \ket{\vac} \\
 \ket{\bFQ {N_f} \pt \q \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\q^{\pt, \sp}_j} \sp \ket{\vac}
 \end{eqnarray*}
-In the definition of $\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right)$, we used for convenience the symbols $\bX {N_f} \pt \n \sp$ and ${N_f}^\pt_\sp$, which can be defined as a function of $( \n^{\pt, \sp}_j )$ with $\bX {N_f} \pt \n \sp \eqdef \left|  \{ j | \n^{\pt, \sp}_j = \n \} \right|$.
+In the definition of $\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right)$, we used for convenience the symbols $\bX {N_f} \pt \n \sp$ and ${N_f}^\pt_\sp$, which can be defined as a function of $( \n^{\pt, \sp}_j )$ with $\bX {N_f} \pt \n \sp \eqdef \left|  \{ j\ |\ \n^{\pt, \sp}_j = \n \} \right|$.
 
 The transition amplitude from any initial state $\ket{\Psi_i}$ to a localized final state $\ket{\Psi_f} = \ket{\bFX {N_f} \pt \n \sp}$ is finally given by:
 \begin{equation*}
