--- a/chapter-quantum-fields.tex
+++ b/chapter-quantum-fields.tex
@@ -213,7 +213,7 @@ where we use the notations ${N'}^\pt_\sp \eqdef \sum_{\q} \bQ {N'} \pt \q \sp$ a
 \ket{\bFX N \pt \n \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\n^{\pt, \sp}_j} \sp \ket{\vac} \\
 \ket{\bFQ {N'} \pt \q \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\q^{\pt, \sp}_j} \sp \ket{\vac}
 \end{eqnarray*}
-In the definition of $\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right)$, we used for convenience the symbols $\bX N \pt \n \sp$ and $N^\pt_\sp$, which can be defined as a function of $( \n^{\pt, \sp}_j )$ with $\bX N \pt \n \sp \eqdef \left|  \{ j | \n^{\pt, \sp}_j = \n \} \right|$.
+In the definition of $\psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right)$, we used for convenience the symbols $\bX N \pt \n \sp$ and $N^\pt_\sp$, which can be defined as a function of $( \n^{\pt, \sp}_j )$ with $\bX N \pt \n \sp \eqdef \left|  \{ j\ |\ \n^{\pt, \sp}_j = \n \} \right|$.
 
 \section{Particle number operators}
 
