--- a/chapter-quantum-fields.tex
+++ b/chapter-quantum-fields.tex
@@ -226,7 +226,7 @@ The total particle number operator is defined as the (finite) sum:
 \begin{equation*}
 \op N \eqdef \sum_{\pt,\n,\sp} \Nop \pt \n \sp = \sum_{\pt,\q,\sp} \Nop \pt \q \sp
 \end{equation*}
-Its eigenspace for the eigenvalue $N$ is written $\Hn N$ and its elements are called ``$N$ particle states'' of the field. The Hilbert space can be decomposed as a (finite) sum of the form:
+Its eigenspace for the eigenvalue $N$ is written $\Hn N$ and its elements are called ``$N$ particle states'' of the field. The Hilbert space can be decomposed into a (finite) sum of the form:
 \begin{equation*}
 \H = \bigoplus_{N}^\perp \Hn N
 \end{equation*}
