Added proof to the theorem

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -198,6 +198,8 @@ Any eventually dying sequence is therefore infinitely improbable, \textit{QED}.
 
 \paragraphtitle{Theorem} No quantum state is mortal.
 
+\paragraphtitle{Proof} This is an immediate consequence of the lemma.
+
 \paragraphtitle{Corollary} There will be with certainty extra-terrestrial forms of conscious life.
 
 %TODO: Philosophical issues: Thought experiments
