--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -60,7 +60,7 @@ Of course, this hypothesis is logically perfectly correct, but it is utmost diff
 \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
 
-\paragraphtitle{Definitions} An infinite sequence $(\cms_t)$, indexed on $t \in \IN$, is said to be ``dead'' if it is constant, i.e. if $\cms_t = \cms_0$ for all $t \in \IN$; to be ``eventually dying'' if it becomes constant after a certain point, i.e. if there exists a $t_1 \in \IN^*$ such that $\cms_t = \cms_{t_1}$ for all $t \geq t_1$, although $\cms_{t_0} \neq \cms_{t_1}$ for some $t_0 < t_1$; and to be ``immortal'' otherwise.
+\paragraphtitle{Definitions} An infinite sequence $(\cms_t)$, indexed on $t \in \IN$, is said to be ``dead'' if it is constant, \textit{i.e.} if $\cms_t = \cms_0$ for all $t \in \IN$; to be ``eventually dying'' if it becomes constant after a certain point, \textit{i.e.} if there exists a $t_1 \in \IN^*$ such that $\cms_t = \cms_{t_1}$ for all $t \geq t_1$, although $\cms_{t_0} \neq \cms_{t_1}$ for some $t_0 < t_1$; and to be ``immortal'' otherwise.
 
 It is said to be ``certain'', for a given initial quantum state $\ket{\Psi_i} \neq 0$, if we have $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = 1$ for all $t \in \IN$; to be ``infinitely improbable'' if, for any initial quantum state $\ket{\Psi_i} \neq 0$, $\lim_{t \to \infty} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = 0$; and to be ``contingent'' otherwise.
 
@@ -195,13 +195,21 @@ Now we've already seen that, for any quantum state $\ket{\Psi}$ orthogonal to $\
 \begin{equation*}
 \forall \ket{\Psi_i} \in \H \setminus \{ 0 \},\ \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) \xrightarrow{t \to \infty} 0
 \end{equation*}
-Any eventually dying sequence is therefore infinitely improbable, \textit{QED}.
+Any eventually dying sequence is therefore infinitely improbable, \textit{Q.~E.~D.}
 
 \paragraphtitle{Theorem} No quantum state is mortal.
 
 \paragraphtitle{Proof} This is an immediate consequence of the lemma.
 
 \paragraphtitle{Corollary} There will be with certainty extra-terrestrial forms of conscious life.
+
+\paragraphtitle{Proof} The mental state $\cms_{t_1}$ we are experiencing right now at time $t_1$ is presumably not the only mental state we have ever experienced, so we take for granted that there has already been a time $t_0 < t_1$ in the past where a mental state $\cms_{t_0} \neq \cms_{t_1}$ has been experienced. The probability that we keep experiencing the same mental state $\cms_{t_1}$ forever from now on can be expessed as a conditional probability of the form:
+\begin{equation*}
+\lim_{t \to \infty} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) / \mathrm P_{t_1}(\cms_0, \dotsc, \cms_{t_1}; \ket{\Psi_i})
+\end{equation*}
+where the sequence $(\cms_t)$ is eventually dying. As a consequence of the lemma, this probability is zero, hence we will experience with certainty a different mental state in the future. This theorem holds for any time $t > t_1$, too: There will be with certainty a time $t' > t$ such that $\cms_{t'} \neq \cms_t$. So basically, once the experienced mental state has changed for the first time in the history of the universe, it will ``keep moving'' forever, although it is still possible that there are long periods of ``mental inactivity'' in between.
+
+This applies in particular to the moment when the Sun, in about five billions of years, will have eventually evolved to a red giant and destroyed the Earth together with every terrestrial form of conscious life. By then, if there isn't yet any extra-terrestrial form of conscious life, the experienced mental state should be $\cms_\vac$, \textit{i.e.} the absence of any mental experience. But this state cannot last forever, as we have just seen. If we call ``extra-terrestrial form of conscious life'' the material substrate of the mental state that would get experienced next, then there will be some with certainty.
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
